# skills-registry

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  HANDOFF.md  README.md  SECURITY.md  install.sh  pyproject.toml  ruff.toml  website-content.md
.github/workflows/: ci.yml  droid-review.yml  release-cli.yml  release-macapp.yml  release.yml  website-deploy.yml
Web-Prototype/: DESIGN-HANDOFF.md  DESIGN-MANIFEST.json  index.html
cli/: go.mod  staticcheck.conf
docs/: registry.md
droid-wiki/: .wiki-meta.json  by-the-numbers.md  deployment.md  fun-facts.md  lore.md  security.md
droid-wiki/api/: cli-commands.md  index.md  mcp-tools.md
droid-wiki/apps/: index.md  installer.md  mcp-server.md  website.md
droid-wiki/background/: design-decisions.md  index.md
droid-wiki/how-to-contribute/: debugging.md  development-workflow.md  index.md  patterns-and-conventions.md  testing.md  tooling.md
droid-wiki/overview/: architecture.md  getting-started.md  glossary.md  index.md
infa-not-for-users/: .dockerignore  .env.example  README.md  pyproject.toml
mac-app/: HANDOFF.md  appcast.xml
npm/: .gitignore  README.md  install.js  package.json  run.js
npm/lib/: binary.js
tests/: test_cache.py  test_cli.py  test_config.py  test_discover_skills.py  test_first_paragraph.py  test_frontmatter.py  test_gather.py  test_gh.py  test_init.py  test_parse_bool.py  test_parse_roots.py  test_registry_api.py  test_registry_server.py  test_show_skills_tool.py  test_skill.py  test_skill_md.py  test_slug.py
website/: package-lock.json
(+120 files in other folders)
