[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skills-mcp"
version = "0.1.0"
description = "MCP server that exposes a directory of Markdown skills to any MCP-compatible client (Claude Code, Claude Desktop, Codex, Cursor, ...)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "anand-92" }]
keywords = ["mcp", "model-context-protocol", "fastmcp", "claude", "skills", "ai-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.1.3,<3",
]

[project.scripts]
skills-mcp = "skills_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/anand-92/skills-mcp"
Repository = "https://github.com/anand-92/skills-mcp"
Issues = "https://github.com/anand-92/skills-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/skills_mcp"]
